--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,239 +1,90 @@
 * {
-	border: none;
-	border-radius: 10;
-    font-family: "SpaceMono Nerd Font", monospace;
-	font-size: 12px;
-	min-height: 10px;
-}
-
-#workspaces {
-    background: #1e1e2e;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding-right: 0px;
-    padding-left: 5px;
-}
-#workspaces button {
-    padding: 5px;
-    color: #313244;
-    margin-right: 5px;
-}
-
-#workspaces button.active {
-    color: #a6adc8;
-}
-
-#workspaces button.focused {
-    color: #a6adc8;
-    background: #eba0ac;
-    border-radius: 10px;
-}
-
-#workspaces button.urgent {
-    color: #11111b;
-    background: #a6e3a1;
-    border-radius: 10px;
-}
-
-#workspaces button:hover {
-    background: #11111b;
-    color: #cdd6f4;
-    border-radius: 10px;
-}
-
-#workspaces, #window {
-    background: #1e1e2e;
-    padding: 0px 10px;
-    margin: 3px 3px;
-    margin-top: 10px;
-    border: 1px solid #181825;
+  font-family: "SpaceMono Nerd Font", monospace;
+  padding-left: 1px;
+  padding-right: 1px;
+  font-weight: 900;
 }
 
 window#waybar {
-    background: rgba(21, 18, 27, 0);
-    color: #cdd6f4;
+    background: transparent;
+    border-radius: 15px;
 }
 
-#window {
-    border-radius: 10px;
-    margin-left: 60px;
-    margin-right: 60px;
+tooltip {
+  border-radius: 15px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #ffffff;
+  background: #000000;
+  color: #ff0000;
+  font-size: 9pt;
+  font-weight: unset;
 }
 
-#network {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #bd93f9;
-    background: #1e1e2e;
-}
-
-#pulseaudio {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #FAE3B0;
-    background: #1e1e2e;
-}
-
-#battery {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-    background: #1e1e2e;
-	color: #B5E8E0;
-}
-
-#battery.charging, #battery.plugged {
-    background: #1e1e2e;
-    color: #B5E8E0;
-}
-
-#battery.critical:not(.charging) {
-    color: #B5E8E0;
-    background: #1e1e2e;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-@keyframes blink {
-    to {
-        background-color: #BF616A;
-        color: #B5E8E0;
-    }
-}
-
-#backlight {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-    background: #1e1e2e;
-	color: #F8BD96;
-}
-#clock {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #ABE9B3;
-    background: #1e1e2e;
-}
-
-#memory {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	margin-bottom: 0px;
-	padding-right: 10px;
-	border-radius: 10px;
-	transition: none;
-	color: #DDB6F2;
-    background: #1e1e2e;
-}
-#cpu {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	margin-bottom: 0px;
-	padding-right: 10px;
-	border-radius: 10px;
-	transition: none;
-	color: #96CDFB;
-    background: #1e1e2e;
-}
-
-#tray {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	margin-bottom: 0px;
-	padding-right: 10px;
-	border-radius: 10px;
-	transition: none;
-	color: #B5E8E0;
-    background: #1e1e2e;
+tooltip label {
+  padding: 7px;
 }
 
 #custom-launcher {
-	font-size: 24px;
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 5px;
-	border-radius: 10px;
-	transition: none;
-    color: #89DCEB;
-    background: #1e1e2e;
+  background: #ff0000;
+  color: #ffffff;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  font-size: 20pt;
 }
 
+#custom-launcher, #network, #pulseaudio, #pulseaudio.percentage, #battery, #battery.percentage, #custom-vpn, #custom-calendar-icon,#backlight, #custom-power, #clock, #clock.date, #custom-time-icon, #clock.time {
+  background: #ff0000;
+  color: #ffffff;
+}
+
+#network {
+  background: #ff0000;
+  color: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 5px;
+  font-size: 8pt;
+}
+
+#pulseaudio {
+  background: #ff0000;
+  color: #ffffff;
+    padding-top: 15px;
+    padding-bottom: 5px;
+  font-size: 9pt;
+}
+
+#battery {
+  background: #ff0000;
+  color: #ffffff;
+    padding-top: 15px;
+    padding-bottom: 0px;
+  font-size: 9pt;
+}
+
+#clock {
+  background: #ff0000;
+  color: #ffffff;
+  padding-top: 25px;
+  padding-bottom: 100px;
+  font-size: 8pt;
+}
+
+#backlight {
+  background: #ff0000;
+  color: #ffffff;
+    padding-top: 15px;
+    padding-bottom: 5px;
+  font-size: 9pt;
+}
 #custom-power {
-	font-size: 20px;
-	margin-top: 6px;
-	margin-left: 8px;
-	margin-right: 8px;
-	padding-left: 10px;
-	padding-right: 5px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-    background: #1e1e2e;
-	color: #F28FAD;
-}
-
-#custom-wallpaper {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-    background: #1e1e2e;
-	color: #C9CBFF;
-}
-
-#custom-updates {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-    background: #1e1e2e;
-	color: #E8A2AF;
-}
-
-#custom-media {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-    background: #1e1e2e;
-	color: #F2CDCD;
+  background: #ff0000;
+  color: #ffffff;
+  padding-top: 200px;
+  padding-bottom: 5px;
+  font-size: 20pt;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
